cmake_minimum_required(VERSION 3.26)
project(ErhanOnaldi20210702136)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(ErhanOnaldi20210702136
        Board.cpp
        Board.h
        Game.cpp
        Game.h
        Piece.cpp
        Piece.h
        tempCodeRunnerFile.cpp
        TetrisGame.cpp)
